<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ToDoDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding">

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="Todo Item 1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="443dp"
        android:padding="@dimen/padding">

        <TextView
            android:id="@+id/detail_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="Todo Item 1Todo Item 1Todo Item 1Todo Item 1Todo Item 1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:padding="@dimen/padding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/detail_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/priority_label"
                />
            <TextView
                android:id="@+id/detail_priority"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="Low "
                android:gravity="end"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/top_bottom_padding">
            <Button
                android:id="@+id/edit_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edit_btn"
                android:background="@drawable/btn_bg"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/top_bottom_padding">
            <Button
                android:id="@+id/mark_done_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mark_as_done_btn"
                android:background="@drawable/mark_done_btn"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>